--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Metrics</title>
   </head>
-  <body style="background: #F8F8F8">
+  <body style="background: #F8F8F8; padding: 0; margin: 0; border: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
